--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.7'
 
 services:
   openrem:
+    container_name: openrem
     restart: always
     # to build image each time
     build:
@@ -92,6 +93,7 @@ services:
     image: rabbitmq:3-management-alpine
 
   orthanc:
+    container_name: orthanc
     image: jodogne/orthanc:latest
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
